Version 5.7.1 (TBD)
    Fixed an issue where URLs were not correctly filtered in some cases #TINY-7025
    Fixed a bug where context menu items with names that contained uppercase characters were not displayed #TINY-7072
    Fixed context menu items lacking support for the `disabled` and `shortcut` properties #TINY-7073
    Fixed a regression whereby the width and height weren't set correctly when embedding content using the `media` dialog #TINY-7074
Version 5.7.0 (2021-02-10)
    Added IPv6 address support to the URI API. Patch contributed by dev7355608 #GH-4409
    Added new `structure` and `style` properties to the `TableModified` event to indicate what kinds of modifications were made #TINY-6643
    Added `video` and `audio` live embed support for the `media` plugin #TINY-6229
    Added the ability to resize `video` and `iframe` media elements #TINY-6229
    Added a new `font_css` setting for adding fonts to both the editor and the parent document #TINY-6199
    Added a new `ImageUploader` API to simplify uploading image data to the configured `images_upload_url` or `images_upload_handler` #TINY-4601
    Added an Oxide variable to define the container background color in fullscreen mode #TINY-6903
    Added Oxide variables for setting the toolbar background colors for inline and sticky toolbars #TINY-6009
    Added a new `AfterProgressState` event that is fired after `editor.setProgressState` calls complete #TINY-6686
    Added support for `table_column_resizing` when inserting or deleting columns #TINY-6711
    Changed table and table column copy behavior to retain an appropriate width when pasted #TINY-6664
    Changed the `lists` plugin to apply list styles to all text blocks within a selection #TINY-3755
    Changed the `advlist` plugin to log a console error message when the `list` plugin isn't enabled #TINY-6585
    Changed the z-index of the `setProgressState(true)` throbber so it does not hide notifications #TINY-6686